# openrally-stage

./: .gitignore  ATTRIBUTION.md  CONTRIBUTING.md  DECISIONS.md  LICENSE  README.md  STAGE_GUIDE.md  pyproject.toml
.github/workflows/: ci.yml
examples/: README.md
examples/evionnaz-test-stage/: stage.toml
examples/evionnaz-test-stage/ac/evionnaz-test-stage/: ATTRIBUTION.txt  README_IMPORT.txt  ac_objects.json  (+3 more)
src/rsb/: __init__.py  cli.py  config.py  pipeline.py  rally.py
src/rsb/export/: __init__.py  ac_track.py  blender_headless.py  kn5.py  rtb.py
src/rsb/fetch/: __init__.py  stac_swisstopo.py
src/rsb/geo/: __init__.py  barriers.py  camber.py  centerline.py  drape.py  gpx.py  surface.py  transforms.py
src/rsb/ir/: __init__.py  bundle.py  types.py
src/rsb/providers/: __init__.py  dem.py
stages/chablais-2026/: rally.toml
stages/chablais-2026/ss-demo-plaine-evionnaz/: stage.toml
stages/chablais-2026/ss1-leysin/: stage.toml
stages/chablais-2026/ss10-13-collombey-muraz/: stage.toml
stages/chablais-2026/ss11-14-les-rives/: stage.toml
stages/chablais-2026/ss12-15-portes-du-soleil/: stage.toml
stages/chablais-2026/ss2-6-panex/: stage.toml
stages/chablais-2026/ss3-7-col-de-la-croix/: stage.toml
stages/chablais-2026/ss4-8-tour-d-ai/: stage.toml
stages/chablais-2026/ss5-9-evionnaz-vernayaz/: stage.toml
tests/: test_ac_track.py  test_barriers.py  test_bundle.py  test_camber.py  test_centerline.py  test_cli.py  test_config.py  test_dem_provider.py  test_drape.py  test_export.py  test_gpx.py  test_kn5.py  test_preview.py  test_rally.py  test_smoke.py  test_surface.py
validate/: __init__.py  preview3d.py
(+4 files in other folders)
