[project]
name = "rally-stage-builder"
version = "0.1.0"
description = "Génère des spéciales de rallye réelles prêtes pour Assetto Corsa à partir de géodonnées ouvertes (OSM + MNT swisstopo)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "rally-stage-builder contributors" }]
keywords = ["rally", "assetto-corsa", "osm", "dem", "swisstopo", "gis"]

dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "shapely>=2.0",
    "pyproj>=3.6",
    "geopandas>=0.14",
    "rasterio>=1.3",
    "osmnx>=1.9",
    "pystac-client>=0.7",
    "requests>=2.31",
    "pydantic>=2.6",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.9",
]

[project.scripts]
rsb = "rsb.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rsb", "validate"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N", "W"]
ignore = ["N803", "N806"]  # noms mathématiques (X, Y, Z, N) autorisés

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
files = ["src/rsb", "validate"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "network: tests nécessitant un accès réseau (swisstopo/OSM), désactivés par défaut en CI.",
]
